--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <header class="header body__header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Логотип Россия">
     <div class="header__lang-links">
-      <a class="header__lang-link header__lang-link_underline" href="#">Ru</a>
-      <a class="header__lang-link" href="#">En</a>
+      <a class="header__lang-link header__lang-link_underline" href="#" target="_blank">Ru</a>
+      <a class="header__lang-link" href="#" target="_blank">En</a>
     </div>
   </header>
   <main>
-    <section class="lead main__lead">
+    <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="картинка маршрут">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
-    <section class="intro main__intro">
+    <section class="intro">
       <h3 class="intro__title">Чего мы там не видели?</h3>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
@@ -35,7 +35,7 @@
         <li>Аэропортов 241</li>
       </ul>
     </section>
-    <section class="photo-grid main__photo-grid">
+    <section class="photo-grid">
       <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="картинка проезд">
       <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="картинка Атарва-тулси">
       <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="картинка туман">
@@ -54,7 +54,7 @@
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+          <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
         <img class="place__image" src="./images/place-kosa.jpg" alt="картинка Куршская коса">
         <div class="place__paragraphs">
@@ -70,7 +70,7 @@
         <h3 class="place__title">Кольский</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
         </div>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="картинка Кольский">
         <div class="place__paragraphs">
@@ -88,7 +88,7 @@
         <h3 class="place__title">Алтай</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
         </div>
         <img class="place__image" src="./images/place-altai.jpg" alt="картинка Алтай">
         <div class="place__paragraphs">
@@ -105,7 +105,7 @@
         <h3 class="place__title">Зимний Байкал</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="каринка Зимний Байкал">
         <div class="place__paragraphs">
@@ -123,7 +123,7 @@
         <h3 class="place__title">Карелия</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+          <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
         <img class="place__image" src="./images/place-karelia.jpg" alt="картинка Карелия">
         <div class="place__paragraphs">
@@ -136,7 +136,7 @@
       </div>
     </section>
     <section class="cover">
-      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <div class="cover__content">
         <h3 class="cover__title">
           До Байкала «на собаках»
@@ -151,11 +151,11 @@
   </main>
   <footer class="footer">
     <div class="footer__links">
-      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+      <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
     </div>
     <p class="footer__copyright">© 2020. Кононов Роман</p>
     </footer>   
