--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header body__content">
     <img class="header__logo" src="./images/header-logo.svg" alt="Логотип Россия">
     <div>
-      <a class="header__lang-link header__lang-link_underline" href="#" target="_blank">Ru</a>
+      <a class="header__lang-link header__lang-link_active" href="#" target="_blank">Ru</a>
       <a class="header__lang-link" href="#" target="_blank">En</a>
     </div>
   </header>
@@ -24,7 +24,7 @@
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro body__content">
-      <h3 class="intro__title">Чего мы там не видели?</h3>
+      <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной
         стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
@@ -34,11 +34,11 @@
         и описали некоторые интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__list">
-        <li>Часовых поясов <span class="intro__list intro__list_number">11</span></li>
-        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list intro__list_number">12</span></li>
-        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list intro__list_number">16</span></li>
-        <li>Природных заповедников <span class="intro__list intro__list_number">105</span></li>
-        <li>Аэропортов <span class="intro__list intro__list_number">241</span></li>
+        <li>Часовых поясов <span class="intro__list-numbers">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-numbers">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-numbers">16</span></li>
+        <li>Природных заповедников <span class="intro__list-numbers">105</span></li>
+        <li>Аэропортов <span class="intro__list-numbers">241</span></li>
       </ul>
     </section>
     <section class="photo-grid body__content">
@@ -57,7 +57,7 @@
     </section>
     <section class="places body__content">
       <div class="place">
-        <h3 class="place__title">Куршская коса</h3>
+        <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
@@ -161,20 +161,20 @@
     </section>
     <section class="cover body__content">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-        <h3 class="cover__title">До Байкала «на собаках»</h3>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
       </a>
     </section>
   </main>
   <footer class="footer body__content">
-    <div class="footer__links">
+    <nav class="footer__links">
       <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
       <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
       <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
       <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
       <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
-    </div>
+    </nav>
     <p class="footer__copyright">© 2020. Кононов Роман</p>
   </footer>
 </body>
